2015-01-22  Eric Botcazou  <ebotcazou@adacore.com>

	* Makefile.am (baseboard_DATA): Add baseboards/visium-sim.exp.
	* Makefile.in: Regenerate.
	* baseboards/visium-sim.exp: New file.

2014-11-25  Ben Elliston  <bje@gnu.org>

	* lib/dejagnu.exp (host_execute): Remove stray leading hyphen.
	Reported by David Malcolm.

2014-10-28  Ben Elliston  <bje@gnu.org>

	* Makefile.in: Regenerate.

2014-10-28  Ben Elliston  <bje@gnu.org>

	* example: Remove stale examples.

2014-10-24  Steve Ellcey  <sellcey@mips.com>

	* dejagnu.h (pass): Make function static as well as inline.
	(xpass): Ditto.
	(fail): Ditto.
	(xfail): Ditto.
	(untested): Ditto.
	(unresolved): Ditto.
	(note): Ditto.
	(totals): Ditto.

2014-10-14  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Only match $directory, not *${directory}* when the
	user passes the --directory option. Reported by Sergey Alyoshin.

2014-10-14  Ben Elliston  <bje@gnu.org>

	* lib/dejagnu.exp (host_execute): Remove buffer_full check. This
	is not the right command keyword -- it is full_buffer. Reported by
	David Malcolm.

2014-07-15  Maciej W. Rozycki  <macro@mips.com>
	    Maciej W. Rozycki  <macro@codesourcery.com>

	* lib/targetdb.exp (add_board_info): New procedure.
	* doc/ref.xml (Add_board_info Procedure): New section.
	(Set_board_info Procedure): Add description.
	(Unset_board_info Procedure): Likewise.
	* doc/user.xml (Board Config File Values): Add `add_board_info'
	reference.  Reorder `gdb_init_command' table rows and remove a
	duplicate entry, reusing it for `gdb_init_commands'.

2014-06-25  Rob Savoye  <rob.savoye@linaro.org>

	* runtest.exp: (lookfor-file): Fix bug were none of the relative
	paths were actually being used for file lookup.

2014-06-06  Ben Elliston  <bje@gnu.org>

	* depcomp, install-sh, missing: Update to latest versions.
	* mkinstalldirs: Remove.
	* Makefile.in: Regenerate.

2014-06-04  Ben Elliston  <bje@gnu.org>

	* Makefile.in: Regenerate with Automake 1.14.1.
	* compile: Add missing file.
